--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 header {
@@ -20,7 +20,6 @@ header {
 .container {
     display: flex;
     align-items: center;
-    font-size: small;
 }
 
 ol {
@@ -32,21 +31,23 @@ ol {
 .li-alta {
     padding: 20px 15px;
     color: white;
+    font-size: small;
 }
 
 .accedi {
     background-color: white;
     padding: 7px;
     border-radius: 15px;
+    font-size: small;
 }
 
-.hero-section {
+.hero {
     background-image: url(../img/jumbo.png);
     background-size: cover;
     height: 525px;
 }
 
-.hero-item {
+.hero-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -80,6 +81,38 @@ h1 {
     border-radius: 20px;
     margin: 15px 7px;
 }
+
+.immagine-testo {
+    display: flex;
+}
+
+
+
+.immagine {
+    width: 65%;
+}
+
+.testo {
+    width: 35%;
+} 
+
+.grey {
+    background-color: lightgray;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.reverse {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+
+
+
+
+
+
 
 
 
